# alc

./: .clang-format  .gitignore  dune-project  meson.build
examples/: lexertest.aleph  lexertest_errors.a0  parsertest.a0  parsertest.aleph
include/alc/: alc.h  ast.h  defs.h  hashtable.h  lexer.h  parser.h  string.h  token.h  vector.h
lib/: alc.ml  ast.ml  dune  lexer.ml  lexer.mli  parser.ml  token.ml  util.ml
lib/ast/: ast.ml  ast.mli  ast_core.ml  ast_exproperator.ml
lib/lexer/: dune  lexer.ml  lexer_comments.ml  lexer_core.ml  lexer_error.ml  lexer_id.ml  lexer_num.ml  lexer_num.mli  lexer_string.ml  lexer_whitespace.ml
lib/parser/: dune  parser.ml  parser.mli  parser_attributes.ml  parser_case_chain.ml  parser_core.ml  parser_decldef.ml  parser_defer.ml  parser_dowhile.ml  parser_enum.ml  parser_export.ml  parser_expr.ml  parser_expr.mli  parser_extern.ml  parser_for.ml  parser_foreach.ml  parser_function.ml  parser_function_arguments.ml  parser_generic_function.ml  parser_generic_placeholder_type_list.ml  parser_generic_type_list.ml  parser_generic_type_list.mli  parser_goto.ml  parser_if.ml  parser_import.ml  parser_initlist.ml  parser_label.ml  parser_loop.ml  parser_misc.ml  parser_module.ml  parser_return.ml  parser_stmt.ml  parser_struct.ml  parser_switch.ml  parser_top.ml  parser_type.ml  parser_type.mli  parser_typedef.ml  parser_union.ml  parser_vardecl.ml  (+3 more)
lib/token/: dune  token.ml  token.mli  token_core.ml
lib/util/: util.ml
libalc/: alc.c  ast.c  global.h  lexer.c  meson.build  token.c
libalc/allocs/: alloc_arena.c  alloc_arena.h  meson.build
libalc/containers/: hashtable.c  hashtable.h  meson.build  string.c  string.h  vector.c  vector.h
libalc/parser/: attributes.c  decldef.c  enum.c  expr.c  extern.c  function.c  generic.c  import.c  initlist.c  label.c  meson.build  module.c  parser.c  parser_private.h  scope.c  stmt.c  stmt_break.c  stmt_continue.c  stmt_defer.c  stmt_do_while.c  stmt_else.c  stmt_fallthrough.c  stmt_for.c  stmt_foreach.c  stmt_goto.c  stmt_if.c  stmt_label.c  stmt_loop.c  stmt_return.c  stmt_switch.c  stmt_while.c  struct.c  top.c  type.c  typedef.c  union.c
src/: ansi.c  ansi.h  error_handler.c  error_handler.h  errorhandler.h  main.c  meson.build
test/: dune  test_alc.ml  test_lexer.ml  test_token.ml  test_util.ml
