(lang dune 3.22)

(name alc)

(generate_opam_files true)

(source
 (codeberg AlephLang/alc))

(authors "Nyvyme <uflatsshlif123@gmail.com>")

(maintainers "Nyvyme <uflatsshlif123@gmail.com>")

; TODO: provide license
; (license LICENSE)

; TODO: provide documentation
; (documentation https://url/to/documentation)

(package
 (name alc)
 (synopsis "Aleph language compiler.")
 (description "Aleph language compiler.")
 (depends ocaml)
 (tags
  ("compiler" "llvm" "aleph")))
