libalc_src += [
  'libalc/parser/attributes.c',
  'libalc/parser/decldef.c',
  'libalc/parser/expr.c',
  'libalc/parser/function.c',
  'libalc/parser/generic.c',
  'libalc/parser/import.c',
  'libalc/parser/initlist.c',
  'libalc/parser/module.c',
  'libalc/parser/parser.c',
  'libalc/parser/top.c',
  'libalc/parser/type.c',
  'libalc/parser/typedef.c',
]
