libalc_src += [
  'libalc/parser/attributes.c',
  'libalc/parser/decldef.c',
  'libalc/parser/enum.c',
  'libalc/parser/expr.c',
  'libalc/parser/extern.c',
  'libalc/parser/function.c',
  'libalc/parser/generic.c',
  'libalc/parser/import.c',
  'libalc/parser/initlist.c',
  'libalc/parser/module.c',
  'libalc/parser/parser.c',
  'libalc/parser/scope.c',
  'libalc/parser/stmt.c',
  'libalc/parser/struct.c',
  'libalc/parser/top.c',
  'libalc/parser/type.c',
  'libalc/parser/typedef.c',
  'libalc/parser/union.c',
]
