libalc_src += [
  'libalc/parser/attributes.c',
  'libalc/parser/decldef.c',
  'libalc/parser/enum.c',
  'libalc/parser/expr.c',
  'libalc/parser/extern.c',
  'libalc/parser/function.c',
  'libalc/parser/generic.c',
  'libalc/parser/import.c',
  'libalc/parser/initlist.c',
  'libalc/parser/module.c',
  'libalc/parser/parser.c',
  'libalc/parser/scope.c',
  'libalc/parser/stmt.c',
  'libalc/parser/stmt_break.c',
  'libalc/parser/stmt_continue.c',
  'libalc/parser/stmt_defer.c',
  'libalc/parser/stmt_do_while.c',
  'libalc/parser/stmt_else.c',
  'libalc/parser/stmt_fallthrough.c',
  'libalc/parser/stmt_for.c',
  'libalc/parser/stmt_foreach.c',
  'libalc/parser/stmt_goto.c',
  'libalc/parser/stmt_if.c',
  'libalc/parser/stmt_label.c',
  'libalc/parser/stmt_loop.c',
  'libalc/parser/stmt_return.c',
  'libalc/parser/stmt_switch.c',
  'libalc/parser/stmt_while.c',
  'libalc/parser/struct.c',
  'libalc/parser/top.c',
  'libalc/parser/type.c',
  'libalc/parser/typedef.c',
  'libalc/parser/union.c',
]
